# mic-stream-util

./: example_usage.py  pyproject.toml
docs/: device_issues_troubleshooting.md
src/mic_stream_util/: __init__.py  cli.py
src/mic_stream_util/backends/: __init__.py  base_backend.py
src/mic_stream_util/backends/pipewire/: pipewire_backend.py
src/mic_stream_util/backends/sounddevice/: sounddevice_backend.py
src/mic_stream_util/cli/: main.py
src/mic_stream_util/cli/commands/: device_info.py  devices.py  monitor.py
src/mic_stream_util/core/: audio_config.py  device_manager.py  microphone_manager.py
src/mic_stream_util/speech/: speech_manager.py
src/mic_stream_util/util/: fuzzy_match.py
